--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -12,14 +12,28 @@
     text-align: center;
     @media screen and (min-width: 768px) {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        flex-wrap: wrap;        
+        justify-content: center;       
     }
     @media screen and (min-width: 1200px) {        
         align-items: baseline;
         text-align: left;
     }    
-} 
+}
+.footer-thumb {      
+    @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    }
+    @media screen and (max-width: 1199.5px) {
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-right: auto;
+        }
+
+}
 .footer__logo {
     @extend %logo;
     margin-top: 0;
@@ -29,8 +43,14 @@
     color: $white-color;
 }
 .footer-container-address {
-    @media screen and (max-width: 1199.5px) {
+    @media screen and (max-width: 767px) {
         margin-bottom: 60px;
+    }
+    @media screen and (min-width: 768px) {
+        margin-right: 165px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-right: 70px;
     }
 }
 .footer-address {
@@ -79,9 +99,7 @@
     
     @media screen and (min-width: 1200px) {
         display: flex;
-        flex-direction: column;
-        margin-right: auto;
-        margin-left: 70px;
+        flex-direction: column;        
     }
     
 }
@@ -145,6 +163,11 @@
     }
     @media screen and (min-width: 1200px) {
         margin-right: 12px;
+    }
+    transition: border $timing $cubic;
+    &:focus, 
+    &:hover {
+        border: 1px solid $blue-color;    
     }
 }
 .subsription__btn {
