--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -67,10 +67,9 @@
     @extend %list;
     @media screen and (min-width: 768px) {
         display: flex;
-        flex-wrap: wrap;
-        text-align: center;
+        flex-wrap: wrap;        
         gap: 30px;
-    }    
+    }
 }
 .projects__item {
     width: 100%;
@@ -123,9 +122,16 @@
     padding-left: 24px;
     padding-right: 24px;
     margin: 0;
+    overflow-y: scroll;
 
     transform: translateY(101%);
     transition: transform $timing $cubic;
+
+    @media screen and (max-width: 355px) {
+        font-size: 16px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
     .projects__item .projects__link:hover &,
     .projects__item .projects__link:focus & {
