--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,8 +8,7 @@
     opacity: 1;
     transition: opacity $timing $cubic;
     overflow-y: scroll;
-    z-index: 111;
-    padding-top: 80px;
+    z-index: 111;   
 }
 .backdrop.is-hidden {
     opacity: 0;
@@ -21,11 +20,13 @@
 }
 .modal {
     @media screen and (max-width: 479.5px) {
-        width: calc(100% - 2 * 15px);;
+        width: calc(100% - 2 * 15px);
+        top: 48%;
     }
     @media screen and (min-width: 480px) {
         width: 450px;
         height: 609px;
+        top: 55%;
     }
     @media screen and (min-width: 1200px) {
         width: 528px;
@@ -49,6 +50,9 @@
 	transition: transform $timing $cubic, 
                 opacity $timing $cubic;
 	opacity: 1;
+    @media screen and (max-width: 400px) {
+        padding: 30px;
+    }
 }
 .modal .close-btn {
     width: 30px;
@@ -82,6 +86,9 @@
     letter-spacing: 0.03em;
     margin-top: 0;
     margin-bottom: 12px;
+    @media screen and (max-width: 400px) {
+        font-size: 18px;
+    }
 }
 .modal-form {
     display: flex;
